script/src/bnf/grammer.bnf
<bnf> ::= { <rule> }

<rule> ::= <branch_rule> | <product_rule>

<branch_rule> ::= "branch" <identifier> "{" <branch_rule_inner> "}"
<branch_rule_inner> ::= { <identifier> [ "with" <string_literal> ] }

<product_rule> ::= "product" <identifier> "{" <product_inner> "}"
<product_inner> ::= { <product_item> [ "with" <string_literal> ] }
<product_item> ::= ( <identifier> ":" <nonterminal> ) | <terminal>
<nonterminal> ::= <repete_item> | <option_item> | <item>
<repete_item> ::= "*" <item>
<option_item> ::= "?" <item>
<item> ::= <identifier>
<terminal> ::= <string_literal>
